<resources>
    <string name="app_name">Android Concepts</string>
    <string name="sender_fragment_title">Let\'s use a bundle to send an object. Choose the array to send</string>
    <string name="arr_example_1">[1, 2, 3]</string>
    <string name="button_sender_title">Send This Object</string>
    <string name="arr_example_2">[3, 2, 1]</string>
    <string name="arr_example_3">[0, 0, 0]</string>
    <string name="receiving_fragment_title">I am the receiving fragment.\n\nThis is the object I received via Bundle:</string>
    <string name="receiving_fragment_data">Nothing yet :(</string>
    <string name="api_fetch_explanation">Here we use Retrofit to fetch api data and a BroadcastReceiver to retrieve the string when the fetch is completed. Enter a CA city.</string>
    <string name="enter_city">Enter city</string>
    <string name="fahrenheit_format">%s \u00B0F</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_name_hint">Lionel Messi</string>
    <string name="add_contact_prompt">Enter contact details for ContentResolver usage.</string>
    <string name="phone_number_hint">012–345–6789</string>
    <string name="get_contact_prompt">Activate ContentResolver for first contact.</string>
    <string name="resolve_content">Resolve Content</string>
</resources>